[package]
name = "circles"
version = "0.1.0"
authors = ["radix"]

[[bin]]
name = "main"

[dependencies]
piston_window = "0.58.0"
piston = "0.27.0"
piston2d-graphics = "0.19.0"
pistoncore-glutin_window = "0.33.0"
piston2d-opengl_graphics = "0.36.1"
time = "0.1"
ncollide = "0.10.0"
nalgebra = "0.9.*"
rand = "0.3.*"
find_folder = "0.3.0"
